re-add cursor that was removed with merge

--- a/themes/greatermedia/assets/css/sass/components/_header.scss
+++ b/themes/greatermedia/assets/css/sass/components/_header.scss
@@ -197,6 +197,7 @@
 .header__search {
 	display: none;
 	color: $primary-border;
+	cursor: pointer;
 	@include bp(medium) {
 		position: relative;
 		display: block;
