--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -610,6 +610,9 @@ img {
         display: table;
         clear: both; } }
 
+#gmr-iframe-main .container, #gmr-iframe-main .single-gmr_gallery .gallery .container, .single-gmr_gallery .gallery #gmr-iframe-main .container {
+  padding-right: 0px; }
+
 .main, .home__highlights {
   float: left;
   width: 100%;
