--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -674,7 +674,7 @@ img {
 .main .container {
   background-color: #fff; }
 
-.content {
+.content, .gallery__archive {
   width: 100%;
   margin-right: 0;
   padding: 2em; }
@@ -1616,6 +1616,10 @@ Curated posts for Featured Articles
     position: absolute;
     left: 50%;
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
 
 .featured__article--content {
@@ -1787,6 +1791,10 @@ Curated posts for Featured Articles
     left: 50%;
     top: 50%;
     width: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
     @media (max-width: 350px) {
       .featured__content--image img {
@@ -2112,6 +2120,10 @@ Community Highlights and Events
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   width: 100%;
   height: 50%;
@@ -2220,6 +2232,10 @@ Community Highlights and Events
     left: 50%;
     top: 50%;
     width: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
     @media (max-width: 350px) {
       .highlights__event--thumb img {
