--- a/themes/greatermedia/assets/css/sass/home/_featured.scss
+++ b/themes/greatermedia/assets/css/sass/home/_featured.scss
@@ -102,15 +102,15 @@ Curated posts for Featured Articles
 .featured__content {
 	padding-bottom: 0;
 	@include row();
-}
+	}
 
 .featured__article--image {
 	@include span-columns(4 of 4);
 	@include omega;
 	overflow: hidden;
 	background-color: $featured-secondary-bg;
-	position: relative;
-	padding-top: 35.71%;
+	position: relative;  
+	padding-top: 35.71%;	
 	img {
 		width: 100%;
 		position: absolute;
@@ -118,7 +118,7 @@ Curated posts for Featured Articles
 		top: 50%;
 		@include transform(translate(-50%, -50%));
 	}
-}
+	}
 
 .featured__article--content {
 	@include span-columns(4 of 4);
@@ -159,13 +159,19 @@ Curated posts for Featured Articles
 	font-size: ms(2);
 	line-height: 1.3;
 	font-weight: bold;
+	color: $color-text-white;
+	
+	.featured__article:hover & {
+		color: $color-text-yellow;
+	}
+	
 	@include bp(small) {
-		font-size: ms(3);
+		font-size: ms(3); 
 	}
 	@include bp(medium) {
 		font-size: ms(4);
 	}
-}
+	}
 
 .featured__article--heading a, .featured__article--heading a:visited {
 	color: $color-text-white;
@@ -235,7 +241,7 @@ Curated posts for Featured Articles
 .featured__content--image {
 	@include span-columns(4 of 12);
 	overflow: hidden;
-	position: relative;
+	position: relative; 
 	height: 100%;
 	img {
 		position: absolute;
@@ -243,7 +249,7 @@ Curated posts for Featured Articles
 		top: 50%;
 		width: 100%;
 		@include transform(translate(-50%, -50%));
-
+		
 		// Special hack to just stretch images vertically at really small sizes 
 		// where the container is likely to be taller than wider. 
 		@media ( max-width: 350px ) {
@@ -252,7 +258,7 @@ Curated posts for Featured Articles
 			max-width: none;
 			max-height: none;
 		}
-
+		
 		@include bp(large) {
 			width: auto;
 			height: 100%;
@@ -260,8 +266,8 @@ Curated posts for Featured Articles
 			max-height: none;
 		}
 	}
-	@include bp(medium) {
-		@include span-columns(4 of 12);
+	@include bp(small) {
+		@include span-columns(4 of 4);
 		@include omega;
 		padding-top: 66.6%;
 	}
@@ -282,17 +288,16 @@ Curated posts for Featured Articles
 	overflow: hidden;
 	@include bp(small) {
 		@include span-columns(4 of 4);
-		min-height: 6.8em
+		min-height: 6.8em 
 	}
 	@include bp(medium) {
-		@include span-columns(8 of 12);
-		@include omega;
+		font-size: ms(1); 
 	}
 	@include bp(large) {
 		@include span-columns(8 of 12);
-		min-height: none;
+		min-height: none; 
 	}
-
+	
 	.home__featured & {
 		color: $highlights-text;
 	}
@@ -311,6 +316,11 @@ Curated posts for Featured Articles
 	-webkit-box-orient: vertical;
 	text-overflow: ellipsis;
 	font-family: $open-sans;
+	color: $color-text-white;
+	
+	.featured__content--block:hover & {
+		color: $color-text-yellow;
+	}
 }
 
 .featured__content--title a:link, .featured__content--title a:visited {
@@ -337,12 +347,12 @@ Curated posts for Featured Articles
 
 	.featured__content--title a:active{
 		color: darken($color-text-yellow, 9%);
-	}
+	}	
 }
 
 
 .featured__content--link {
-}
+	}
 
 .featured__content--btn {
 	@include btn($btn-bg, $color-text-white, $btn-bg, .25em, 1.2em, .7em);
@@ -351,10 +361,10 @@ Curated posts for Featured Articles
 	white-space: nowrap;
 }
 
-.featured__content--btn:hover {
+.featured__content--block:hover .featured__content--btn {
 	@include btn($btn-hover, $color-text-black, $btn-hover, .25em, 1.2em, .7em);
 }
 
-.featured__content--btn:active {
+.featured__content--block:active .featured__content--btn {
 	@include btn($btn-active, $color-text-white, $btn-active, .25em, 1.2em, .7em);
 }
