--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -1686,9 +1686,12 @@ Curated posts for Featured Articles
   font-family: "Open Sans", sans-serif;
   font-size: 1.26563em;
   line-height: 1.3;
-  font-weight: bold; }
+  font-weight: bold;
+  color: #ffffff; }
   .featured__article--heading:last-child {
     margin-right: 0; }
+  .featured__article:hover .featured__article--heading {
+    color: #f5ed7f; }
   @media screen and (min-width: 480px) {
     .featured__article--heading {
       font-size: 1.42383em; } }
@@ -1809,12 +1812,12 @@ Curated posts for Featured Articles
         height: 100%;
         max-width: none;
         max-height: none; } }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 480px) {
     .featured__content--image {
       float: left;
       display: block;
-      margin-right: 2.35765%;
-      width: 31.76157%;
+      margin-right: 7.42297%;
+      width: 100%;
       margin-right: 0;
       padding-top: 66.6%; }
       .featured__content--image:last-child {
@@ -1859,13 +1862,7 @@ Curated posts for Featured Articles
         margin-right: 0; } }
   @media screen and (min-width: 768px) {
     .featured__content--meta {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 65.88078%;
-      margin-right: 0; }
-      .featured__content--meta:last-child {
-        margin-right: 0; } }
+      font-size: 1.125em; } }
   @media screen and (min-width: 1024px) {
     .featured__content--meta {
       float: left;
@@ -1889,7 +1886,10 @@ Curated posts for Featured Articles
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+  color: #ffffff; }
+  .featured__content--block:hover .featured__content--title {
+    color: #f5ed7f; }
 
 .featured__content--title a:link, .featured__content--title a:visited {
   color: #282827; }
@@ -1935,7 +1935,7 @@ Curated posts for Featured Articles
   .featured__content--btn:last-of-type {
     margin-right: 0; }
 
-.featured__content--btn:hover {
+.featured__content--block:hover .featured__content--btn {
   display: inline-block;
   line-height: 1;
   padding: 0.25em 1.2em;
@@ -1948,14 +1948,14 @@ Curated posts for Featured Articles
   color: #000000 !important;
   text-transform: uppercase;
   cursor: pointer; }
-  .featured__content--btn:hover:hover, .featured__content--btn:hover:focus {
+  .featured__content--block:hover .featured__content--btn:hover, .featured__content--block:hover .featured__content--btn:focus {
     background-color: #f2e754;
     border-color: #f2e754;
     color: #000000; }
-  .featured__content--btn:hover:last-of-type {
+  .featured__content--block:hover .featured__content--btn:last-of-type {
     margin-right: 0; }
 
-.featured__content--btn:active {
+.featured__content--block:active .featured__content--btn {
   display: inline-block;
   line-height: 1;
   padding: 0.25em 1.2em;
@@ -1968,11 +1968,11 @@ Curated posts for Featured Articles
   color: #ffffff !important;
   text-transform: uppercase;
   cursor: pointer; }
-  .featured__content--btn:active:hover, .featured__content--btn:active:focus {
+  .featured__content--block:active .featured__content--btn:hover, .featured__content--block:active .featured__content--btn:focus {
     background-color: black;
     border-color: black;
     color: #ffffff; }
-  .featured__content--btn:active:last-of-type {
+  .featured__content--block:active .featured__content--btn:last-of-type {
     margin-right: 0; }
 
 /*doc
