--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -4085,7 +4085,7 @@ category: Components
   display: block;
   height: 23px; }
 
-.live-stream__listen-now--btn, .podcast__download {
+.live-stream__listen-now--btn, .podcast__download, .podcast__subscribe {
   display: inline-block;
   line-height: 1;
   padding: 0.25em 1em;
@@ -4104,11 +4104,11 @@ category: Components
   -o-border-radius: 1em;
   -border-radius: 1em;
   border-radius: 1em; }
-  .live-stream__listen-now--btn:hover, .podcast__download:hover, .live-stream__listen-now--btn:focus, .podcast__download:focus {
+  .live-stream__listen-now--btn:hover, .podcast__download:hover, .podcast__subscribe:hover, .live-stream__listen-now--btn:focus, .podcast__download:focus, .podcast__subscribe:focus {
     background-color: #aa1c20;
     border-color: #aa1c20;
     color: #ffffff; }
-  .live-stream__listen-now--btn:last-of-type, .podcast__download:last-of-type {
+  .live-stream__listen-now--btn:last-of-type, .podcast__download:last-of-type, .podcast__subscribe:last-of-type {
     margin-right: 0; }
 
 .live-stream__now-playing--btn {
@@ -5680,15 +5680,27 @@ category: Components - Shows
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 82.94039%; }
+  width: 74.41059%; }
   .podcast__meta:last-child {
     margin-right: 0; }
   .podcast__meta h3 {
     margin: 0;
-    clear: both; }
+    clear: both;
+    display: inline-block; }
   .podcast__meta time {
     float: left;
     margin-right: 1em; }
+
+.podcast__download {
+  background-color: #fff;
+  border: 1px solid grey;
+  color: grey !important;
+  text-transform: none;
+  margin-left: 10px; }
+
+.podcast__subscribe {
+  margin-left: 5px;
+  text-transform: none; }
 
 .single-show .featured__content {
   margin: 0.75em 0 1em; }
