--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -68,11 +68,11 @@ category: Base
 ```
 
 */
-.entry__event--details, .footer__nav--list, .contest__sponsors--list, .gallery-grid__pagination--list {
+.entry__event--details, .footer__nav--list, .contest__sponsors--list, .gallery__grid--pagination-list {
   padding: 0;
   margin: 0; }
 
-.entry__event--item, .footer__nav--list .menu-item, .live-player__stream--item, .contest__sponsor, .gallery-grid__pagination--item {
+.entry__event--item, .footer__nav--list .menu-item, .live-player__stream--item, .contest__sponsor, .gallery__grid--pagination-list li {
   list-style: none;
   padding: 0;
   margin: 0; }
@@ -687,7 +687,7 @@ img {
   margin-right: 0;
   padding: 1.5em 0.809em; }
   @media screen and (min-width: 768px) {
-    .content {
+    .content, .gallery__archive {
       padding: 3em 3.236em; } }
 
 .live-player {
@@ -3781,8 +3781,15 @@ Link posts contain a link to an external site. They can also optionally have a f
     float: left;
     display: block;
     margin-right: 4.82916%;
-    width: 30.11389%; }
+    width: 65.05695%; }
     .entry2-ad-wrap .entry2__meta:last-child {
+      margin-right: 0; }
+  .entry2-ad-wrap .entry2.has-thumbnail .entry2__meta {
+    float: left;
+    display: block;
+    margin-right: 4.82916%;
+    width: 30.11389%; }
+    .entry2-ad-wrap .entry2.has-thumbnail .entry2__meta:last-child {
       margin-right: 0; }
   .entry2-ad-wrap .entry2-ad-wrap__ad {
     float: left;
@@ -5426,6 +5433,254 @@ category: Components - Ads
       clear: both; }
     .contest__submission .contest__submission--thumbnail {
       height: 117px; } }
+.event__thumbnail {
+  float: left;
+  display: block;
+  margin-right: 7.42297%;
+  width: 100%;
+  background-color: #e8e9e9;
+  margin: 0 auto 2em;
+  text-align: center; }
+  .event__thumbnail:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 480px) {
+    .event__thumbnail {
+      float: left;
+      display: block;
+      margin-right: 4.82916%;
+      width: 100%; }
+      .event__thumbnail:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 768px) {
+    .event__thumbnail {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 100%; }
+      .event__thumbnail:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1024px) {
+    .event__thumbnail {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 100%; }
+      .event__thumbnail:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1400px) {
+    .event__thumbnail {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 100%; }
+      .event__thumbnail:last-child {
+        margin-right: 0; } }
+
+.event__thumbnail img {
+  margin: 0 auto; }
+
+.tribe-events-button {
+  display: block !important;
+  line-height: 1;
+  padding: .25em 1em;
+  margin-top: 0 !important;
+  margin-bottom: 1em !important;
+  margin-right: 0 !important;
+  outline: none;
+  background-color: #d22228 !important;
+  border: 1px solid #d22228 !important;
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.88889em;
+  color: #ffffff !important;
+  text-transform: uppercase;
+  cursor: pointer; }
+  @media screen and (min-width: 768px) {
+    .tribe-events-button {
+      display: inline-block !important;
+      margin-bottom: 0 !important;
+      margin-right: .5em !important; } }
+
+.tribe-events-button:last-of-type {
+  margin-right: 0 !important; }
+
+.tribe-events-button:hover {
+  background-color: #f5ed7f !important;
+  border: 1px solid #f5ed7f !important;
+  color: #000000 !important; }
+
+.tribe-events-button:active {
+  background-color: #000000 !important;
+  border: 1px solid #000000 !important;
+  color: #ffffff !important; }
+
+.single-tribe_events .tribe-events-event-meta {
+  border: none;
+  background-color: transparent; }
+
+.tribe-events-event-meta .tribe-events-meta-group {
+  padding: 0; }
+
+.tribe-events-event-meta .tribe-events-meta-group-details {
+  float: left;
+  display: block;
+  margin-right: 7.42297%;
+  width: 100%;
+  margin-right: 0;
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #d0d2d3; }
+  .tribe-events-event-meta .tribe-events-meta-group-details:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 480px) {
+    .tribe-events-event-meta .tribe-events-meta-group-details {
+      float: left;
+      display: block;
+      margin-right: 4.82916%;
+      width: 100%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-details:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 768px) {
+    .tribe-events-event-meta .tribe-events-meta-group-details {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%;
+      padding-bottom: 0;
+      margin-bottom: 0;
+      border-bottom: none; }
+      .tribe-events-event-meta .tribe-events-meta-group-details:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1024px) {
+    .tribe-events-event-meta .tribe-events-meta-group-details {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%; }
+      .tribe-events-event-meta .tribe-events-meta-group-details:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1400px) {
+    .tribe-events-event-meta .tribe-events-meta-group-details {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%; }
+      .tribe-events-event-meta .tribe-events-meta-group-details:last-child {
+        margin-right: 0; } }
+
+.tribe-events-event-meta .tribe-events-meta-group-venue {
+  float: left;
+  display: block;
+  margin-right: 7.42297%;
+  width: 100%;
+  padding-bottom: 10px;
+  margin-bottom: 10px; }
+  .tribe-events-event-meta .tribe-events-meta-group-venue:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 480px) {
+    .tribe-events-event-meta .tribe-events-meta-group-venue {
+      float: left;
+      display: block;
+      margin-right: 4.82916%;
+      width: 100%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-venue:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 768px) {
+    .tribe-events-event-meta .tribe-events-meta-group-venue {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%;
+      padding-bottom: 0;
+      margin-right: 0 !important;
+      margin-bottom: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-venue:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1024px) {
+    .tribe-events-event-meta .tribe-events-meta-group-venue {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-venue:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1400px) {
+    .tribe-events-event-meta .tribe-events-meta-group-venue {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-venue:last-child {
+        margin-right: 0; } }
+
+.tribe-events-event-meta .tribe-events-meta-group-gmap {
+  float: left;
+  display: block;
+  margin-right: 7.42297%;
+  width: 100%;
+  margin-right: 0;
+  margin-bottom: 0; }
+  .tribe-events-event-meta .tribe-events-meta-group-gmap:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 480px) {
+    .tribe-events-event-meta .tribe-events-meta-group-gmap {
+      float: left;
+      display: block;
+      margin-right: 4.82916%;
+      width: 100%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-gmap:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 768px) {
+    .tribe-events-event-meta .tribe-events-meta-group-gmap {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 100%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-gmap:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1024px) {
+    .tribe-events-event-meta .tribe-events-meta-group-gmap {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 100%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-gmap:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 1400px) {
+    .tribe-events-event-meta .tribe-events-meta-group-gmap {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 100%;
+      margin-right: 0; }
+      .tribe-events-event-meta .tribe-events-meta-group-gmap:last-child {
+        margin-right: 0; } }
+
+.single-tribe_events .tribe-events-venue-map {
+  padding: 0;
+  background: transparent;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  -border-radius: 0;
+  border-radius: 0; }
+
+.tribe-events-single-section-title {
+  font-family: "Open Sans", sans-serif; }
+
+.single-tribe_events #tribe-events-footer {
+  border-top: none;
+  padding-top: 0; }
+
 /*doc
 ---
 title: Podcast Excerpt
@@ -5537,6 +5792,17 @@ category: Components - Shows
     float: left;
     margin-right: 1em; }
 
+.podcast__download {
+  background-color: #fff;
+  border: 1px solid grey;
+  color: grey !important;
+  text-transform: none;
+  margin-left: 10px; }
+
+.podcast__subscribe {
+  margin-left: 5px;
+  text-transform: none; }
+
 .single-show .featured__content {
   margin: 0.75em 0 1em; }
 .single-show .featured__content--block {
@@ -5591,7 +5857,7 @@ category: Components - Shows
   .single-show .highlights__community, .single-show .highlights__events {
     padding-top: 0; } }
 .single-show .highlights__event--item {
-  background-color: #f1f1f3; }
+  background-color: #fff; }
 .single-show .highlights__community--item:hover .highlights__community--title {
   color: #f5ed7f; }
 .single-show .entry2__thumbnail {
@@ -5900,7 +6166,7 @@ category: Components - Shows
         top: 0; } }
 
 .show__feature--desc {
-  background-color: #f1f1f3;
+  background-color: #fff;
   color: #404041; }
   .show__feature--desc h3 {
     margin: 0;
@@ -7260,7 +7526,7 @@ category: Components - Gallery Archive
   list-style: none;
   display: inline-block;
   height: 28px;
-  margin-right: 1em;
+  margin-right: 1.45em;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 0.88889em;
