--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -8384,6 +8384,35 @@ select {
       .profile-page .profile-page__sidebar p {
         display: block; } }
 
+.ui-menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+
+.ui-menu .ui-menu-item {
+  position: relative;
+  cursor: pointer;
+  min-height: 0; }
+
+.ui-autocomplete {
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: default; }
+
+.header__search--form .ui-autocomplete {
+  background-color: #ffffff;
+  width: 100%;
+  top: 100%;
+  left: 0; }
+
+.ui-menu-item {
+  color: #000000;
+  padding: 1em; }
+
+.ui-state-focus {
+  color: #ffffff; }
+
 .show__live-links .live-links-group {
   display: block; }
   .show__live-links .live-links-group:before, .show__live-links .live-links-group:after {
