--- a/themes/greatermedia/assets/css/sass/base/_variables.scss
+++ b/themes/greatermedia/assets/css/sass/base/_variables.scss
@@ -128,8 +128,7 @@ $btn-muted: $gray !default;
 $btn-muted-hover: $cardinal !default;
 $btn-muted-active: $black !default;
 
-$social-color: $medium-gray;
-$social-hover: $cardinal !default;
+$social-hover: $heath !default;
 
 $form-bg: $light-gray;
 $form-text: $dark-gray;
