--- a/themes/greatermedia/assets/css/sass/components/_social-share-links.scss
+++ b/themes/greatermedia/assets/css/sass/components/_social-share-links.scss
@@ -17,12 +17,12 @@ These are examples of Social Share Links for single articles.
 
 
 a.social-share-link {
-	color: $social-color;
+	color: $black;
 	display: inline-block;
 	width: 40px;
 	height: 40px;
 	font-size: 20px;
-	border: 1px solid $social-color;
+	border: 1px solid $black;
 	border-radius: 50%;
 	padding: 9px;
 	margin-right: 0.25em;
@@ -31,9 +31,8 @@ a.social-share-link {
 		margin-right: 0;
 	}
 
-	&:hover {	
+	&:hover {
 		color: $social-hover;
-		border-color: $social-hover; 
 	}
 }
 
@@ -80,8 +79,6 @@ a.social-share-link {
 .social__link--google-plus:before {
 	@extend %gmr-icons;
 	content: "\e611";
-	position: relative;
-	top: 1px; // Needs a bit of futzing. 
 }
 
 .social__link--youtube:before {
