--- a/themes/greatermedia/assets/css/sass/greater_media.scss
+++ b/themes/greatermedia/assets/css/sass/greater_media.scss
@@ -26,6 +26,7 @@
 @import "layout/menus";
 @import "layout/sub-menus/sub-menus";
 @import "layout/sub-menus/format-full-width";
+@import "layout/sub-menus/format-small-previews";
 
 // Home
 @import "home/blog-roll";
@@ -59,6 +60,8 @@
 @import "components/autocomplete-keywords";
 @import "components/profile";
 @import "components/shows-live-links";
+@import "components/livefyre-comments";
+@import "components/adblock";
 
 // Custom styles only used on single pages
 @import "pages/single";
