--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -8596,6 +8596,11 @@ select {
   color: #000000;
   padding: 1em; }
 
+.ui-menu .ui-menu-item.ui-state-focus {
+  color: #ffffff;
+  background: #d22228;
+  border: none; }
+
 .ui-autocomplete {
   position: absolute;
   top: 0;
@@ -8607,9 +8612,6 @@ select {
   width: 100%;
   top: 100%;
   left: 0; }
-
-.ui-state-focus {
-  color: #ffffff; }
 
 .profile-page {
   /**
