--- a/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
+++ b/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
@@ -524,7 +524,7 @@ category: Components
 .on-air, .up-next {
 	float: left;
 	width: 78.125%; // 250px
-	padding: 23px 0 22px 3.75%; // 12px
+	padding: 14px 0 13px 3.75%; // 12px
 	margin-right: 3.75%; // 12px
 	line-height: 1;
 	@include bp(small) {
@@ -547,16 +547,19 @@ category: Components
 }
 
 .on-air__title, .up-next__title {
-	display: inline-block;
+	display: block;
+	margin-bottom: 5px;
 	@include bp(medium) {
+		display: inline-block;
 		margin-bottom: 10px;
 		font-size: ms(-1);
 	}
 }
 
 .on-air__show, .up-next__show {
-	display: inline-block;
+	display: block;
 	@include bp(medium) {
+		display: inline-block;
 		font-size: ms(-1);
 		text-transform: uppercase;
 	}
