--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -4760,7 +4760,7 @@ category: Components
 .on-air, .up-next {
   float: left;
   width: 78.125%;
-  padding: 23px 0 22px 3.75%;
+  padding: 14px 0 13px 3.75%;
   margin-right: 3.75%;
   line-height: 1; }
   @media screen and (min-width: 480px) {
@@ -4781,16 +4781,19 @@ category: Components
   display: block; }
 
 .on-air__title, .up-next__title {
-  display: inline-block; }
+  display: block;
+  margin-bottom: 5px; }
   @media screen and (min-width: 768px) {
     .on-air__title, .up-next__title {
+      display: inline-block;
       margin-bottom: 10px;
       font-size: 0.88889em; } }
 
 .on-air__show, .up-next__show {
-  display: inline-block; }
+  display: block; }
   @media screen and (min-width: 768px) {
     .on-air__show, .up-next__show {
+      display: inline-block;
       font-size: 0.88889em;
       text-transform: uppercase; } }
 
